Update stats to use tags instead of measure for quick filtering